@@ -181,6 +181,9 @@ scan(file = "", what = double(0), nmax = -1, n = -1, sep = "",
   If an upper bound on the number of character strings cannot be deduced
   from \code{nmax} or \code{n}, sharing is used for the first 10000
   unique strings which are read in.
+
+  There is a check for a user interrupt every 1000 lines if \code{what}
+  is a list, otherwise every 10000 items.
 }
 \value{
   if \code{what} is a list, a list of the same length and same names (as
